--- a/Samples/LedLineIt/Makefile
+++ b/Samples/LedLineIt/Makefile
@@ -41,7 +41,7 @@ endif
 
 
 
-ifeq (Windows,$(findstring Windows,$(TARGET_PLATFORMS)))
+ifeq (Windows,$(findstring Windows,$(TargetPlatforms)))
 # AVOID "_WIN32_WINNT not defined. Defaulting to _WIN32_WINNT_MAXVER (see WinSDKVer.h)"
 CXXFLAGS += -D_WIN32_WINNT=0x0501
 # Maybe helps avoid bugs?
@@ -91,7 +91,7 @@ $(ObjDir)LedLineIt.res:
 
 
 # Cannot be done generically through configuration cuz a given build of Stroika might contain EXEs targetting multiple subsystems
-ifeq (Windows,$(findstring Windows,$(TARGET_PLATFORMS)))
+ifeq (Windows,$(findstring Windows,$(TargetPlatforms)))
 LinkerArgs_ExtraSuffix+= -SUBSYSTEM:Windows
 LinkerArgs_ExtraSuffix+= -ENTRY:wWinMainCRTStartup
 endif
