configure: rarely used RUN_PREFIX renamed to RunPrefix

--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -72,18 +72,18 @@ ifneq (,$(VALGRIND))
 VALEXTRARUN_= cd /tmp && valgrind $(VALGRIND_OPTIONS)
 RUNTEST_REMOTECOPYSETUP2=  scp $(SSH_REMOTE_WARNINGS_OFF) -q *.supp $(REMOTE):/tmp/
 endif
-RUNTEST_EXE_RUN=ssh $(SSH_REMOTE_WARNINGS_OFF) $(REMOTE) ${RUN_PREFIX} "$(VALEXTRARUN_) /tmp/$(BASEEXEPATTERN) ${GTEST_ARGS_}"
-RUNTEST_EXE_RUN_PRINTLINE=scp $(EXEPATTERN)...; ssh $(REMOTE) ${RUN_PREFIX} $(VALEXTRARUN_) /tmp/$(BASEEXEPATTERN) ${GTEST_ARGS_}
+RUNTEST_EXE_RUN=ssh $(SSH_REMOTE_WARNINGS_OFF) $(REMOTE) ${RunPrefix} "$(VALEXTRARUN_) /tmp/$(BASEEXEPATTERN) ${GTEST_ARGS_}"
+RUNTEST_EXE_RUN_PRINTLINE=scp $(EXEPATTERN)...; ssh $(REMOTE) ${RunPrefix} $(VALEXTRARUN_) /tmp/$(BASEEXEPATTERN) ${GTEST_ARGS_}
 else ifeq (memcheck,$(VALGRIND))
 RUNTEST_EXE_RUN=valgrind $(VALGRIND_OPTIONS) $(EXEPATTERN) ${GTEST_ARGS_}
 RUNTEST_EXE_RUN_PRINTLINE=$(RUNTEST_EXE_RUN) ${GTEST_ARGS_}
 else
-ifeq (${RUN_PREFIX},)
+ifeq (${RunPrefix},)
 RUNTEST_EXE_RUN=$(EXEPATTERN) ${GTEST_ARGS_}
 RUNTEST_EXE_RUN_PRINTLINE=$(EXEPATTERN) ${GTEST_ARGS_}
 else
-RUNTEST_EXE_RUN=${RUN_PREFIX} $(EXEPATTERN) ${GTEST_ARGS_}
-RUNTEST_EXE_RUN_PRINTLINE=${RUN_PREFIX} $(EXEPATTERN) ${GTEST_ARGS_}
+RUNTEST_EXE_RUN=${RunPrefix} $(EXEPATTERN) ${GTEST_ARGS_}
+RUNTEST_EXE_RUN_PRINTLINE=${RunPrefix} $(EXEPATTERN) ${GTEST_ARGS_}
 endif
 endif
 
